@startuml Diagrama_ER_Restaurante
!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define primary_key(x) <b><u>x</u></b>
!define foreign_key(x) <i>x</i>
!define unique(x) <color:green>x</color>

skinparam linetype ortho
skinparam class {
    BackgroundColor<<Entity>> LightYellow
    BorderColor<<Entity>> Black
    BackgroundColor<<Relationship>> LightBlue
    BorderColor<<Relationship>> Black
}

' ========================================
' TABLAS PRINCIPALES DEL NEGOCIO
' ========================================

class usuarios <<Entity>> {
    primary_key(id): BIGINT
    --
    nombre: VARCHAR(50)
    apellido_paterno: VARCHAR(50)
    apellido_materno: VARCHAR(50)
    unique(email): VARCHAR(100)
    password: VARCHAR(255)
    remember_token: VARCHAR(100)
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

class unidad_medidas <<Entity>> {
    primary_key(id): BIGINT
    --
    nombre: VARCHAR(50)
    abreviatura: VARCHAR(10)
    descripcion: VARCHAR(100)
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

class categorias <<Entity>> {
    primary_key(id): BIGINT
    --
    nombre: VARCHAR(50)
    descripcion: VARCHAR(100)
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

class proveedores <<Entity>> {
    primary_key(id): BIGINT
    --
    nombre: VARCHAR(50)
    direccion: VARCHAR(100)
    telefono: VARCHAR(50)
    email: VARCHAR(50)
    descripcion: VARCHAR(100)
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

class insumos <<Entity>> {
    primary_key(id): BIGINT
    --
    nombre: VARCHAR(50)
    descripcion: VARCHAR(100)
    stock_minimo: FLOAT
    imagen: VARCHAR(100)
    foreign_key(unidad_medida_id): BIGINT
    foreign_key(categoria_id): BIGINT
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

class recetas <<Entity>> {
    primary_key(id): BIGINT
    --
    nombre: VARCHAR(50)
    descripcion: VARCHAR(255)
    indicaciones: TEXT
    tiempo_preparacion: INT
    imagen: VARCHAR(100)
    precio: DECIMAL(10,2)
    visible: BOOLEAN
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

class recetas_insumos <<Relationship>> {
    primary_key(id): BIGINT
    --
    foreign_key(receta_id): BIGINT
    foreign_key(insumo_id): BIGINT
    cantidad: INT
    desperdicio: INT
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

class ventas <<Entity>> {
    primary_key(id): BIGINT
    --
    cantidad: FLOAT
    precio: FLOAT
    total: FLOAT
    foreign_key(receta_id): BIGINT
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

class compras <<Entity>> {
    primary_key(id): BIGINT
    --
    costo_total: FLOAT
    proveedor: VARCHAR(200)
    descripcion: TEXT
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

class movimiento_inventarios <<Entity>> {
    primary_key(id): BIGINT
    --
    cantidad: FLOAT
    tipo: VARCHAR(255)
    motivo: VARCHAR(255)
    foreign_key(insumo_id): BIGINT
    foreign_key(venta_id): BIGINT
    foreign_key(compra_id): BIGINT
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

class planes_produccion <<Entity>> {
    primary_key(id): BIGINT
    --
    foreign_key(receta_id): BIGINT
    cantidad: INT
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

class reportes_personalizados <<Entity>> {
    primary_key(id): BIGINT
    --
    nombre: VARCHAR(100)
    fecha_desde: DATE
    fecha_hasta: DATE
    descripcion: TEXT
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

class historial <<Entity>> {
    primary_key(id): BIGINT
    --
    user_id: BIGINT
    usuario: VARCHAR(255)
    rol: VARCHAR(255)
    accion: VARCHAR(255)
    detalles: TEXT
    fecha: DATE
    hora: TIME
    seccion: VARCHAR(255)
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

' ========================================
' SISTEMA DE PERMISOS (Spatie)
' ========================================

class permissions <<Entity>> {
    primary_key(id): BIGINT
    --
    name: VARCHAR(255)
    guard_name: VARCHAR(255)
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

class roles <<Entity>> {
    primary_key(id): BIGINT
    --
    name: VARCHAR(255)
    guard_name: VARCHAR(255)
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

class model_has_permissions <<Relationship>> {
    foreign_key(permission_id): BIGINT
    model_type: VARCHAR(255)
    foreign_key(model_id): BIGINT
}

class model_has_roles <<Relationship>> {
    foreign_key(role_id): BIGINT
    model_type: VARCHAR(255)
    foreign_key(model_id): BIGINT
}

class role_has_permissions <<Relationship>> {
    foreign_key(permission_id): BIGINT
    foreign_key(role_id): BIGINT
}

' ========================================
' TABLAS DEL SISTEMA LARAVEL
' ========================================

class notifications <<Entity>> {
    primary_key(id): CHAR(36)
    --
    type: VARCHAR(255)
    notifiable_type: VARCHAR(255)
    notifiable_id: BIGINT
    data: TEXT
    read_at: TIMESTAMP
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

class sessions <<Entity>> {
    primary_key(id): VARCHAR(255)
    --
    user_id: BIGINT
    ip_address: VARCHAR(45)
    user_agent: TEXT
    payload: LONGTEXT
    last_activity: INT
}

' ========================================
' RELACIONES
' ========================================

' Insumos
unidad_medidas "1" -- "0..*" insumos : tiene
categorias "1" -- "0..*" insumos : clasifica
insumos "1" -- "0..*" recetas_insumos : usa
insumos "1" -- "0..*" movimiento_inventarios : registra

' Recetas
recetas "1" -- "0..*" recetas_insumos : contiene
recetas "1" -- "0..*" ventas : se vende
recetas "1" -- "0..*" planes_produccion : planifica

' Ventas y Compras
ventas "1" -- "0..*" movimiento_inventarios : genera
compras "1" -- "0..*" movimiento_inventarios : genera

' Usuarios
usuarios "1" -- "0..*" historial : realiza
usuarios "1" -- "0..*" sessions : tiene
usuarios "1" -- "0..*" notifications : recibe

' Sistema de Permisos
usuarios "1" -- "0..*" model_has_roles : tiene
usuarios "1" -- "0..*" model_has_permissions : tiene
roles "1" -- "0..*" model_has_roles : asigna
roles "1" -- "0..*" role_has_permissions : contiene
permissions "1" -- "0..*" model_has_permissions : otorga
permissions "1" -- "0..*" role_has_permissions : pertenece

' ========================================
' NOTAS
' ========================================

note right of insumos
    **Stock Management**
    - stock_minimo: Alerta cuando 
      el inventario está bajo
    - Se actualiza automáticamente
      con movimiento_inventarios
end note

note bottom of recetas_insumos
    **Tabla Intermedia**
    Define qué insumos usa cada 
    receta y en qué cantidad
end note

note left of movimiento_inventarios
    **Registro de Movimientos**
    - tipo: "entrada" o "salida"
    - motivo: compra, venta, 
      ajuste, merma, etc.
    - Mantiene historial completo
end note

note top of ventas
    **Registro de Ventas**
    - total = cantidad × precio
    - Genera automáticamente
      movimiento de inventario
end note

note bottom of historial
    **Auditoría del Sistema**
    Registra todas las acciones
    de los usuarios
end note

@enduml

